fix logo covered on mobile - menu open

--- a/assets/scss/partials/navigation/_nav.scss
+++ b/assets/scss/partials/navigation/_nav.scss
@@ -31,7 +31,9 @@
 
     .nav-wrapper {
         display: flex;
+        position: relative;
         align-items: center;
+        z-index: $z-index-nav;
         padding: 0 70px 0 70px;
         justify-content: space-between;
 
